[tool.poetry]
name = "daily"
version = "0.1.0"
description = "Generate a daily scrum report from gitlab and post it on a mattermost channel."
authors = ["mobo"]

[tool.poetry.dependencies]
python = "^3.10"
python-gitlab = "^3.1.0"
pandas = "^1.3.5"
black = "^21.12b0"
numpy = "^1.22.1"
mattermost = "^6.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
daily = "src.daily.main:run"
